# pylsp-rope

./: .gitignore  AUTHORS.txt  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  python-publish.yml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml  run-test.yml
pylsp_rope/: commands.py  lsp_diff.py  plugin.py  project.py  refactoring.py  rope.py  text.py  typing.py
test/: conftest.py  helpers.py  test_commands.py  test_extract.py  test_generate.py  test_import_utils.py  test_inline.py  test_introduce_parameter.py  test_local_to_field.py  test_lsp_diff.py  test_method_to_method_object.py  test_plugin.py  test_project.py  test_rename.py  test_usefunction.py
test/fixtures/: function.py  generate_class.py  generate_function.py  generate_variable.py  introduce_parameter.py  many_changes.py  many_changes_inlined.py  method.py  method_local_to_field.py  method_object.py  method_object_use_function.py  method_with_global_function.py  method_with_global_variable.py  method_with_similar_global_function.py  method_with_similar_global_variable.py  redundant_import.py  simple.py  simple_extract_method.py  simple_extract_method_with_similar.py  simple_extract_variable.py  simple_extract_variable_with_similar.py  simple_rename.py  simple_rename_extra.py  simple_rename_extra_result.py  simple_rename_result.py  undefined_variable.py  use_function.py
