[metadata]
name = pylsp-rope
version = 0.1.5
author = Lie Ryan
author_email = lie.1296@gmail.com
url = https://github.com/python-rope/pylsp-rope
description = Extended refactoring capabilities for Python LSP Server using Rope.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License


[options]

packages = find:

install_requires = 
    python-lsp-server
    rope

python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_rope = pylsp_rope.plugin


[options.extras_require]
# extras local dev environment
dev =
    pytest
    typing-extensions; python_version < '3.8'
    build
    twine


# extras for CI test runner
test =
    pytest
